--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,29 +1,82 @@
-<div class = "main_saved_recipes">
-<% if @recipes.length == 0 %>
-    <div class = "image-container">
-        <img src= "<%= asset_path('sad_face.png')%>" height = "250px" width = "280px">
-        
-        <p>
-        You dont have any saved recipes.
-        </p>
-    </div>
+    <div class = 'wrapper'>
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <div class = 'profile-userpic' >
+                    <img id="profilepic" src="<%= asset_path('gradient3.jpg')%>" alt="profilepic" height="128" width="128">
+                    <p style = "padding-top: 10px;">Dummy Dummy</p>
+                </div>
+            </div>
+            <ul class="list-unstyled components" style = "text-align: center !important;">
 
-<% else %>
-    <div class = "saved_recipes" >
-        <ul class = "list_of_saved_recipes">
-            <% @recipes.each do |recipe| %>
-            <div class = "recipe-container">
-                <li class = "recipe-content">
-                    <div class = "recipe-info">
-                        <div class = "recipe-name"> Name: <p class = "recipe-text"> <%= recipe.name %> </p></div>
-                        <div class = "recipe-name"> SourceUrl: <p class  ="recipe-text"> <a href ="<%= recipe.sourceUrl %>"class = "recipe-text" ref = "noopener noreferrer"> <%= recipe.sourceUrl %> </a></p></div>
-                        <%= link_to 'Delete Recipe', recipe, method: :delete, data: { confirm: 'Do you want to delete this recipe?' }, class: "recipe_link_word" %>
+                <li>
+                    <%= link_to food_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;', data: {turbolinks: false} do %>
+                        <%= fa_icon('shopping-cart 2x')%>
+                        <b>Food</b>
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to entertainment_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;', data: {turbolinks: false} do %>
+                        <%= fa_icon('child 2x')%>
+                        <b>Entertainment</b>
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to support_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;', data: {turbolinks: false} do %>
+                        <%= fa_icon('plus-square 2x')%>
+                        <b>Support</b>
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to chatmessages_path, class: 'btn sidebar-btn', style: 'background-color: #233d63;', data: {turbolinks: false} do %>
+                        <%= fa_icon('comment 2x')%>
+                        <b>Lobby Chat</b>
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to myrecipes_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;', data: {turbolinks: false} do %>
+                        <%= fa_icon('heart 2x')%>
+                        <b>My Recipes</b>
+                    <% end %>
+                </li>
+                <li>
+                    <div id = "user_id" style = "visibility: hidden">
                     </div>
                 </li>
+            </ul>
+            <button type="button" id="sidebarCollapse" class = "sidebar-button-rotate">
+                    <%= fa_icon('long-arrow-left 2x')%>
+            </button>
+        </nav>
+    <div id = 'main_content'>    
+        <div class = "main_saved_recipes">
+        <% if @recipes.length == 0 %>
+            <div class = "image-container">
+                <img src= "<%= asset_path('sad_face.png')%>" height = "250px" width = "280px">
+                
+                <p>
+                You dont have any saved recipes.
+                </p>
             </div>
-            <% end %>
-        </ul>
+
+        <% else %>
+            <div class = "saved_recipes" >
+                <ul class = "list_of_saved_recipes">
+                    <% @recipes.each do |recipe| %>
+                    <div class = "recipe-container">
+                        <li class = "recipe-content">
+                            <div class = "recipe-info">
+                                <div class = "recipe-name"> Name: <p class = "recipe-text"> <%= recipe.name %> </p></div>
+                                <div class = "recipe-name"> SourceUrl: <p class  ="recipe-text"> <a href ="<%= recipe.sourceUrl %>"class = "recipe-text" ref = "noopener noreferrer"> <%= recipe.sourceUrl %> </a></p></div>
+                                <%= link_to 'Delete Recipe', recipe, method: :delete, data: { confirm: 'Do you want to delete this recipe?' }, class: "recipe_link_word" %>
+                            </div>
+                        </li>
+                    </div>
+                    <% end %>
+                </ul>
+            </div>
+        <% end %>
+        </div>
     </div>
-<% end %>
 </div>
 
