--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
 
       <% else %>
         <li class = "nav-item">
-          <%= link_to "Login", new_user_session_path, :method => :get, data: {turbolinks: false}, style: "float:right;" %>
+          <%= link_to "Main Page", main_path, data: {turbolinks: false}, style: "float:right;" %>
         </li>
       <% end %>
   </nav>
