--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -3,7 +3,7 @@
     <div class="sidebar-header">
         <div class = 'profile-userpic' >
             <img id="profilepic" src="<%= asset_path('gradient3.jpg')%>" alt="profilepic" height="128" width="128">
-            <p style = "padding-top: 10px;"><%= current_user.email.split('@')[0] %></p>
+            <p style = "padding-top: 10px;">Dummy Dummy</p>
         </div>
     </div>
     <ul class="list-unstyled components" style = "text-align: center !important;">
@@ -40,7 +40,7 @@
         </li>
         <li>
             <div id = "user_id" style = "visibility: hidden">
-                <%= current_user.id%>
+                <%# <%  current_user.id%> %>
             </div>
         </li>
     </ul>
